// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ibBTC Redeem Input Change displays output balance when redeem amount is inputted 1`] = `
<div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-106 WithStyles(ForwardRef(Grid))-root-107 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <p
        class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
      >
        Balance: 
        10.000000
      </p>
    </div>
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-139 WithStyles(ForwardRef(Grid))-root-140 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-8-45 MuiGrid-grid-sm-7-58"
      >
        <div
          class="MuiInputBase-root-142 WithStyles(ForwardRef(InputBase))-root-141"
        >
          <input
            autocomplete="off"
            class="MuiInputBase-input-153"
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0.000"
            spellcheck="false"
            style="text-align: right;"
            type="text"
            value="12"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-160 WithStyles(ForwardRef(Grid))-root-161 MuiGrid-container-4 MuiGrid-spacing-xs-1-26 MuiGrid-item-5 MuiGrid-grid-xs-4-41 MuiGrid-grid-sm-5-56"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <button
            class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-163"
            >
              max
            </span>
            <span
              class="MuiTouchRipple-root-218"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <div
            class="makeStyles-tokenContainer-201"
          >
            <img
              alt="ibBTC icon"
              class="makeStyles-tokenIcon-196"
              src="/assets/icons/ibbtc.png"
            />
            <div
              class="MuiTypography-root-109 MuiTypography-body1-111"
            >
              ibBTC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-align-items-xs-center-12 MuiGrid-grid-xs-12-49"
  >
    <svg
      class="makeStyles-arrowDown-202"
      fill="none"
      height="18"
      viewBox="0 0 13 18"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.5 15.2138L11.6295 10L13 11.3931L6.5 18L-6.08938e-08 11.3931L1.37054 10L6.5 15.2138Z"
        fill="white"
        fill-rule="evenodd"
      />
      <line
        stroke="white"
        stroke-width="2"
        x1="6.5"
        x2="6.5"
        y1="16"
        y2="4.37114e-08"
      />
    </svg>
  </div>
  <div
    class="MuiGrid-root-3 makeStyles-outputContent-1 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-203 WithStyles(ForwardRef(Grid))-root-204 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-7-58 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-7-86"
      >
        <h1
          class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-205 WithStyles(ForwardRef(Typography))-root-206 MuiTypography-h1-114"
        >
          20.000000
        </h1>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-207 WithStyles(ForwardRef(Grid))-root-208 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-5-56 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-5-84"
      >
        <button
          aria-label="token options"
          class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 makeStyles-selectButton-199 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-163"
          >
            <div
              class="makeStyles-tokenContainer-201"
            >
              <img
                alt="bcrvRenBTC icon"
                class="makeStyles-tokenIcon-196"
                src="/assets/icons/bcrvrenbtc.png"
              />
              <div
                class="MuiTypography-root-109 MuiTypography-body1-111"
              >
                bcrvRenBTC
              </div>
            </div>
            <span
              class="MuiButton-endIcon-187 MuiButton-iconSizeSmall-188"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-209"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-218"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-228"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Current Conversion Rate: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            1 
            ibBTC
             : 
            1.000000
             
            bcrvRenBTC
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Fees: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            <span
              class=""
              title="Redeem Fee: 0%"
            >
              0.012000
               
              ibBTC
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Total Redeem Amount: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            20.000000 bcrvRenBTC
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <button
      class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-contained-170 MuiButton-containedPrimary-171 MuiButton-containedSizeLarge-182 MuiButton-sizeLarge-184 MuiButton-fullWidth-185"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-163"
      >
        REDEEM
      </span>
      <span
        class="MuiTouchRipple-root-218"
      />
    </button>
  </div>
</div>
`;

exports[`ibBTC Redeem can apply max balance 1`] = `
<div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-106 WithStyles(ForwardRef(Grid))-root-107 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <p
        class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111 MuiTypography-colorTextSecondary-135"
      >
        Balance: 
        10.000000
      </p>
    </div>
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-139 WithStyles(ForwardRef(Grid))-root-140 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-8-45 MuiGrid-grid-sm-7-58"
      >
        <div
          class="MuiInputBase-root-142 WithStyles(ForwardRef(InputBase))-root-141 MuiInputBase-disabled-145"
        >
          <input
            autocomplete="off"
            class="MuiInputBase-input-153 MuiInputBase-disabled-145"
            disabled=""
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0.000"
            spellcheck="false"
            style="text-align: right;"
            type="text"
            value="10"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-160 WithStyles(ForwardRef(Grid))-root-161 MuiGrid-container-4 MuiGrid-spacing-xs-1-26 MuiGrid-item-5 MuiGrid-grid-xs-4-41 MuiGrid-grid-sm-5-56"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <button
            class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-163"
            >
              max
            </span>
            <span
              class="MuiTouchRipple-root-218"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5"
        >
          <div
            class="makeStyles-tokenContainer-201"
          >
            <img
              alt="ibBTC icon"
              class="makeStyles-tokenIcon-196"
              src="/assets/icons/ibbtc.png"
            />
            <div
              class="MuiTypography-root-109 MuiTypography-body1-111"
            >
              ibBTC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-align-items-xs-center-12 MuiGrid-grid-xs-12-49"
  >
    <svg
      class="makeStyles-arrowDown-202"
      fill="none"
      height="18"
      viewBox="0 0 13 18"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.5 15.2138L11.6295 10L13 11.3931L6.5 18L-6.08938e-08 11.3931L1.37054 10L6.5 15.2138Z"
        fill="white"
        fill-rule="evenodd"
      />
      <line
        stroke="white"
        stroke-width="2"
        x1="6.5"
        x2="6.5"
        y1="16"
        y2="4.37114e-08"
      />
    </svg>
  </div>
  <div
    class="MuiGrid-root-3 makeStyles-outputContent-1 MuiGrid-container-4"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-203 WithStyles(ForwardRef(Grid))-root-204 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-7-58 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-7-86"
      >
        <h1
          class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-205 WithStyles(ForwardRef(Typography))-root-206 MuiTypography-h1-114"
        >
          11.988000
        </h1>
      </div>
      <div
        class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-207 WithStyles(ForwardRef(Grid))-root-208 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-grid-xs-12-49 MuiGrid-grid-sm-5-56 MuiGrid-grid-md-12-77 MuiGrid-grid-lg-5-84"
      >
        <button
          aria-label="token options"
          class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-outlined-167 makeStyles-selectButton-199 MuiButton-outlinedSizeSmall-179 MuiButton-sizeSmall-183"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-163"
          >
            <div
              class="makeStyles-tokenContainer-201"
            >
              <img
                alt="bcrvRenBTC icon"
                class="makeStyles-tokenIcon-196"
                src="/assets/icons/bcrvrenbtc.png"
              />
              <div
                class="MuiTypography-root-109 MuiTypography-body1-111"
              >
                bcrvRenBTC
              </div>
            </div>
            <span
              class="MuiButton-endIcon-187 MuiButton-iconSizeSmall-188"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-209"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-218"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <div
      class="MuiGrid-root-3 WithStyles(ForwardRef(Grid))-root-228"
    >
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Current Conversion Rate: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            1 
            ibBTC
             : 
            1.000000
             
            bcrvRenBTC
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Fees: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            <span
              class=""
              title="Redeem Fee: 0%"
            >
              0.012000
               
              ibBTC
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-3 MuiGrid-container-4 MuiGrid-item-5 MuiGrid-justify-content-xs-space-between-23 MuiGrid-grid-xs-12-49"
      >
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <h6
            class="MuiTypography-root-109 MuiTypography-subtitle1-120"
          >
            Total Redeem Amount: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-6-43"
        >
          <p
            class="MuiTypography-root-109 WithStyles(ForwardRef(Typography))-root-108 MuiTypography-body1-111"
          >
            11.988000 bcrvRenBTC
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-3 MuiGrid-item-5 MuiGrid-grid-xs-12-49"
  >
    <button
      class="MuiButtonBase-root-191 MuiButton-root-162 MuiButton-contained-170 MuiButton-containedPrimary-171 MuiButton-containedSizeLarge-182 MuiButton-sizeLarge-184 MuiButton-fullWidth-185"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-163"
      >
        Connect Wallet
      </span>
      <span
        class="MuiTouchRipple-root-218"
      />
    </button>
  </div>
</div>
`;
